--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10,<3.13"
 dlt = {extras = ["duckdb"], version = "^1.5.0"}
 streamlit = "^1.41.1"
+dbt-core = "^1.9.1"
+dbt-duckdb = "^1.9.1"
 
 [build-system]
 requires = ["poetry-core"]
