Added inheritance of objects to provide transform methods to specific pipelines

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ streamlit = "^1.41.1"
 dbt-core = "^1.9.1"
 dbt-duckdb = "^1.9.1"
 
+[tool.poetry.dev-dependencies]
+ipykernel = "^6.29.5"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
